#120 Fixed comments styling in modal
- Enable scrollbar but hide its from the UI

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -526,8 +526,14 @@ button.dropdown-item:focus {
 .modal .post-comment-text {
     display: inline-block;
     margin-left: 10px;
-    width: 258px;
+    width: 245px;
     vertical-align: top;
+    overflow-wrap: break-word;
+}
+
+.post-comment-text > a {
+    float: left;
+    padding-right: 5px;
 }
 
 .modal .card-post-date {
@@ -704,5 +710,17 @@ button.dropdown-item:focus {
 }
 
 .comment-container {
+    height: 407px;
     overflow-y: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.comment-container::-webkit-scrollbar {
+  display: none;
+}
+
+ /*Hide scrollbar for IE, Edge and Firefox */
+.comment-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
